@@ -78,7 +78,7 @@ The format of the dasdinit command is:
 <pre>
 Hercules DASD image file creation program
 Version 3.06
-(c)Copyright 1999-2007 by Roger Bowler, Jan Jaeger, and others
+(c)Copyright 1999-2009 by Roger Bowler, Jan Jaeger, and others
 Builds an empty dasd image file:
 
   dasdinit [-options] filename devtype[-model] [volser] [size]
