@@ -1,3 +1,4 @@
+23 Jan 2009 copyright notice - Bernard van der Helm
 17 Jan 2009 Fix change recording on page crossing first op of MVC - Reported by Greg Price
 08 Jan 2009 Cosmetic improvement to CPU type display on startup - Jay
             Maynard
